test/type/wrong/overlap2.kk
// test overlap error
function g( x : int ) { x }
function g(x) { x }
